2013-01-20  Glenn Morris  <rgm@gnu.org>

	* profiler.el (profiler-running-p): New function.
	(profiler-cpu-profile): Use profiler-running-p.
	(profiler-report-mode-map): Add some more menu entries.

2013-01-19  Glenn Morris  <rgm@gnu.org>

	* mail/unrmail.el (unrmail): Do not mangle the mbox From line;
	fixes 2012-12-07 change.  (Bug#13499)

2013-01-19  Leo Liu  <sdl.web@gmail.com>

	* dired.el (dired-get-marked-files): Prune erroneous values due to
	last change.  (Bug#13152)

2013-01-19  Glenn Morris  <rgm@gnu.org>

	* progmodes/etags.el (tags-table-check-computed-list):
	Preserve point in tags buffer.  (Bug#13412)

	* emacs-lisp/lisp-mode.el (lisp-indent-function): Doc fix.

2013-01-19  Christian Wittern  <cwittern@gmail.com>  (tiny change)
	    Chong Yidong  <cyd@gnu.org>

	* image-mode.el (image-next-file, image-previous-file): New
	commands (Bug#8453).
	(image-mode-map): Bind them to n and p.
	(image-mode--images-in-directory): New helper function.

2013-01-19  Chong Yidong  <cyd@gnu.org>

	* image-mode.el (image-mode-fit-frame): Add a frame argument.
	Suggested by Drew Adams (Bug#7730).  Handle window decorations;
	save and restore the old window configuration.

2013-01-18  Leo Liu  <sdl.web@gmail.com>

	* progmodes/js.el: Tweak autoload cookie for alias.

2013-01-17  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-notify-watch-descriptor): Make it
	buffer local, again.  This was lost with the fix on 2013-01-12.

2013-01-17  Jürgen Hötzel  <juergen@archlinux.org>

	* eshell/esh-util.el (eshell-path-env): Make it buffer local, in
	order to support several eshell buffers in parallel.

2013-01-17  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-use-notify): In the :set function, do
	not modify `kill-buffer-hook'.
	(auto-revert-notify-rm-watch): Remove
	`auto-revert-notify-rm-watch' from `kill-buffer-hook'.
	(auto-revert-notify-add-watch): Do not call
	`auto-revert-notify-rm-watch', but add it to a buffer local