@@ -1,5 +1,8 @@
 2013-01-20  Glenn Morris  <rgm@gnu.org>
 
+	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map):
+	Add native profiler menu entries.
+
 	* profiler.el (profiler-running-p): New function.
 	(profiler-cpu-profile): Use profiler-running-p.
 	(profiler-report-mode-map): Add some more menu entries.
